--- a/view/plantilla/css/style.css
+++ b/view/plantilla/css/style.css
@@ -1,3 +1,15 @@
 #agregar{
     text-align: right;
 }
+
+#datosUsuario{
+    margin-bottom: 5px;
+}
+
+#img{
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px ;
+    border: 5px;
+    border-style: dashed;
+}
