Agragar producto + ver productos agregados

--- a/view/plantilla/css/style_usuario.css
+++ b/view/plantilla/css/style_usuario.css
@@ -13,3 +13,11 @@
     border: 5px;
     border-style: dashed;
 }
+
+#imga{
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px ;
+    border: 5px;
+    border-style: dashed;
+}
