--- a/view/admin/css/style_producto.css
+++ b/view/admin/css/style_producto.css
@@ -14,3 +14,11 @@
     border: 5px;
     border-style: dashed;
 }
+
+#imga{
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px ;
+    border: 5px;
+    border-style: dashed;
+}
